--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   background-color: #2c3e50;
   color: #ecf0f1;
@@ -6,19 +13,31 @@ body {
   font-size: 16px;
 }
 
-.main-content.main-title {
-  font-size: 3em;
-  margin-bottom: 0;
+.score {
+  margin-right: 2em;
+}
+
+.header-container {
+  display: flex;
+  font-size: 1.5em;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.main-title {
+  font-size: 2.5em;
   font-weight: 700;
 }
 
 .main-content {
-  height: 80vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
   font-size: 2em;
+  margin-top: 4em;
 }
 
 .score {
@@ -46,4 +65,8 @@ body {
 
 .green {
   color: #2ecc71;
+}
+
+.comp-choice {
+  display: none;
 }
